kubernetes/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: shopsys
spec:
    rules:
        -   host: ~
            http:
                paths:
                    -   path: /
                        backend:
                            serviceName: webserver-php-fpm
                            servicePort: 8080
        -   host: ~
            http:
                paths:
                    -   path: /
                        backend:
                            serviceName: webserver-php-fpm
                            servicePort: 8080
